Update get course endpoint to include statistical data
Also updated swagger documentation for changes made to the course data model
